update delete all model
