# docs/swagger.json
@@ -63,6 +63,24 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete a Comments.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comments"
+                ],
+                "summary": "Delete a Comments.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Comment"
+                        }
+                    }
+                }
             }
         },
         "/Tags": {
@@ -83,6 +101,24 @@
                             "items": {
                                 "$ref": "#/definitions/models.TagPost"
                             }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Delete a Tags.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tags"
+                ],
+                "summary": "Delete a Tags.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Tag"
                         }
                     }
                 }
@@ -200,6 +236,26 @@
                 }
             }
         },
+        "/posts/:id": {
+            "delete": {
+                "description": "Delete a Post.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Delete a Post.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Post"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Register for user.",
@@ -217,7 +273,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginUsers"
+                            "$ref": "#/definitions/models.RegisterUsers"
                         }
                     }
                 ],
@@ -345,6 +401,10 @@
         },
         "models.LoginUsers": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -460,6 +520,24 @@
                     "type": "integer"
                 },
                 "nickname": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RegisterUsers": {
+            "type": "object",
+            "required": [
+                "nickname",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
